--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "rng_f"
+
 [dependencies]
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["std_rng"]}
 clap = { version = "4.1.4", features = ["derive"] }
 thiserror = "1.0.38"
