--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ path = "src/main.rs"
 name = "rng_f"
 
 [dependencies]
-rand = { version = "0.8.5", features = ["std_rng"]}
+rand = { version = "0.8.5", features = ["small_rng"]}
 clap = { version = "4.1.4", features = ["derive"] }
 thiserror = "1.0.38"
